# dotfiles

./: .gitignore  README.md  scripts
.claude/: settings.local.json
alacritty/.config/: alacritty.toml
alacritty/.config/alacritty/: alacritty.toml
atuin/.config/atuin/: config.toml
bash/: .bashrc
bat/.config/bat/: config
btop/.config/btop/: btop.conf
fish/.config/fish/: config.fish  fish_plugins  fish_variables  fish_variables.sync-conflict-20260222-044211-DR273QW
ghostty/.config/ghostty/: config
git/: .gitignore_global
karabiner/.config/karabiner/: karabiner.json
kitty/.config/kitty/: kitty.conf
markdownlint-cli2/: .markdownlint-cli2.jsonc
markdownlint-cli2/.config/markdownlint-cli2/: markdownlint-cli2.yaml
mc/.config/mc/: hotlist  ini  mc.ext.ini
nvim/.config/nvim/: lazy-lock.json  lazyvim.json  (+1 more)
scripts/: bid  bid-init  test.py
scripts/.config/scripts/: .gitignore  bid  bid.py  chafa  clean-text  clean-text-outlook  clean-text-outlook.py  clean-text.py  copy-file-to-clipboard  get_sharepoint_link.py  lazy-update  ok  pyproject.toml  setup.bat  test_r0.xlsx
scripts/.config/scripts/docs/: DS J12813 TASIK - DP3 EDSV DSV - COM R0.md  Excel.officeUI  PERSONAL.XLSB  bid-command.md  bid_cpdf.md  bid_setup.md  co_r1.md  handover.md  handover_r1.md  vo_r1.md
scripts/.config/scripts/util/: audit.py  beautify.py  excelx.py  haz.py  haz_config.toml  mob_config.toml  pdfx.py  schedule.py  sharepoint_fetch.py
scripts/.config/scripts/wheels/: .gitignore
sesh/.config/sesh/: sesh.toml
starship/.config/: starship.toml
zsh/: .zprofile  .zshrc
(+67 files in other folders)
