[project]
name = "dotfiles"
version = "0.1.0"
description = "My dotfiles"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "docx2pdf>=0.1.8",
    "pandas>=2.2.3",
    "playwright>=1.57.0",
    "pydantic>=2.10.5",
    "pypdf>=5.3.0",
    "python-decouple>=3.8",
    "reportlab>=4.3.1",
    "xlwings>=0.33.5",
]
